# self-contained-python-app

./: .gitignore  Makefile  README.md  conda-env.yml  pyproject.toml  run_app.sh
self_contained_python_app/: main.py
tests/: test_foo.py
