[tool.poetry]
name = "self-contained-python-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "self_contained_python_app" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = { extras = ["parquet"], version = "^2.0.1" }
pyarrow = "^12.0.0"
orjson = "^3.8.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
